--- a/templates/example.html
+++ b/templates/example.html
@@ -1,10 +1,10 @@
 {{define "title"}}Immudb{{end}}
 
 {{define "body"}}
-<h1>immudb - Easy use:</h1>
+<h1>immudb interface:</h1>
 
 <button onclick="window.location.href='https://codenotary.io';">Log in</button>
-<button type="button">Create Database</button>
+<button type="button">Change password</button>
 
 
 
